added step to repeat

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li>open an account</li>
             <li>post content</li>
             <li>follow other people</li>
+            <li>rinse and repeat</li>
         </ol>
     </body>
 </html>
