idk what but something changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src = "images/twitter.jpg" alt = "a desk with a coffee cup and a tablet displaying the twitter logo"></a>
         <p> <strong>さあ</strong>始めて. Is social media good for companies? Yes, it allows for direct interaction. Companies can get feedback
         and learn what customers are saying about them.</p>
-        <h3 id= "Steps"><p>To use social media, you must:</p></h3>
+        <h3 id= "Steps">To use social media, you must:</h3>
         <ol>
             <li>decide on <a href= "https://twitter.com" title="this will take you to the twitter homesite">platform</a></li>
             <li>open an account</li>
