--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <nav>
             <ul>
+                <li> <a href = "index.html">Home</a></li>
                 <li><a href = "facebook.html">Facebook</a></li>
                 <li>Twitter</li>
                 <li>Instagram</li>
