added placehold comments in twitter html, added screenshots to use later

--- a/instagram.html
+++ b/instagram.html
@@ -7,8 +7,9 @@
         </title>
         <link href="styles/styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
+
     </head>
-    <body>
+    <body style = "background-color: #d62976;"> <!--for fun "background-image: linear-gradient(to right,#d62976,#962fbf, #4f5bd5 );"-->
         <nav>
             <ul>
                 <li> <a href = "index.html">Home</a></li>
@@ -17,7 +18,7 @@
                 <li><a href = "instagram.html">Instagram</a></li>
             </ul>
         </nav>
-        <h1>Facebook Overview</h1>
+        <h1>Instagram Overview</h1>
         <p>not ready. stop peeking :/</p>
         <footer>
             <p>Copyright 2020 Cameron Gibson. All rights reserved.</p>
