--- a/twitter.html
+++ b/twitter.html
@@ -8,7 +8,7 @@
         <link href="styles/styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body style = "background-color: cyan;">
         <nav>
             <ul>
                 <li> <a href = "index.html">Home</a></li>
@@ -18,7 +18,17 @@
             </ul>
         </nav>
         <h1>Twitter Overview</h1>
+        <!-- screenshot-->
+
+        <!-- writing dets-->
         <p>not ready. stop peeking :/</p>
+
+        <!-- embed tweet-->
+
+        <!-- demographics-->
+
+        <!-- quick tips-->
+
         <footer>
             <p>Copyright 2020 Cameron Gibson. All rights reserved.</p>
         </footer>
