--- a/facebook.html
+++ b/facebook.html
@@ -8,7 +8,7 @@
         <link href="styles/styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body style="background-color: #0C08F1;">
         <nav>
             <ul>
                 <li> <a href = "index.html">Home</a></li>
